Revert "fixed index page on smaller screens"
This reverts commit 7980b52abefba6c1986d9d27f5e27159a527c913.

--- a/CSS/student.css
+++ b/CSS/student.css
@@ -4,20 +4,18 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+ 
+ #topBar{
+     width: 100%;
+     height: 7.2em;
+     background: rgba(255, 255, 255, 0.9) ;
+ }
+ 
+ #logo{
+     margin-left: 6em;
+ }
 
-#topBar {
-    min-width: local;
-    width: 100%;
-    height: 7.2em;
-    background: rgba(255, 255, 255, 0.9);
-}
-
-#logo {
-    width: auto;
-    margin-left: 6em;
-}
-
-.loginFormCont {
+ .loginFormCont{
     background: rgba(255, 255, 255, 0.9);
     margin-top: 1em;
     bottom: 0;
@@ -64,8 +62,7 @@ body {
     margin-right: 12em;
     margin-top: 0;
     height: 100%;
-    min-height: 0;
-    min-width: 0;
+    min-height: 80vh;
 }
 
 #moduleCard {
@@ -174,158 +171,4 @@ body {
     margin-top: 2em;
     margin-bottom: 2em;
     margin-right: 3em;
-}
-
-/* 
-Different screen sizes
- */
-
-/* tiny tiny screen*/
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-    .body {
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-    }
-    #topBar {
-        width: 100%;
-        height: 6.2em;
-    }
-    #logo {
-        margin-left: 1em;
-        width: 30%;
-        height: 4.5em;
-        margin-top: 1em;
-    }
-    .text-bottom {
-        font-size: 0.7em;
-        margin-top: 1em;
-    }
-    #title {
-        font-size: 1.8em;
-        margin-top: 1em;
-    }
-    .sidebar {
-        position: fixed;
-        width: 30%;
-        padding-top: 12.3em;
-        top: 0%;
-        bottom: 0%;
-        right: 1%;
-        font-size: 0.5em;
-    }
-    .dropdown {
-        position: relative;
-        display: inline-block;
-    }
-    .dropbtn {
-        background-color: #3498DB;
-        color: white;
-        padding: 12px;
-        font-size: 0.8em;
-        border: none;
-        cursor: pointer;
-        margin-left: auto;
-    }
-    .dropbtn:hover, .dropbtn:focus {
-        background-color: #2980B9;
-        padding: 12px;
-        font-size: 0.8em;
-    }
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f1f1f1;
-        /* min-width: 160px; */
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-        font-size: 0.8em;
-        width: 60%;
-    }
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: inline-block;
-    }
-    .dropdown-content a:hover {
-        background-color: #ddd;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: inline-block;
-    }
-    .show {
-        display: inline-block;
-    }
-    .show a {
-        display: inline-block;
-    }
-    .show a:hover {
-        display: inline-block;
-        background-color: #ddd;
-        width: 100%;
-    }
-    #gradeCard {
-        min-width: 12rem;
-        height: 12em;
-        margin-left: 3em;
-        margin-top: 2em;
-        margin-bottom: 2em;
-        margin-right: 3em;
-    }
-    #moduleCard {
-        min-width: 12em;
-        width: auto;
-        min-height: 10.5em;
-        height: auto;
-        right: 5em;
-        margin-top: 2em;
-        margin-bottom: 2em;
-        font-size: 0.5em;
-    }
-    #gradeCard {
-        min-width: 10.5em;
-        min-height: 10.5em;
-        right: 5em;
-        margin-top: 2em;
-        margin-bottom: 2em;
-        font-size: 0.5em;
-    }
-    #examCard {
-        min-width: 12em;
-        min-height: 17em;
-        right: 5em;
-        margin-top: 2em;
-        margin-bottom: 2em;
-        font-size: 0.5em;
-    }
-    .jumbotron {
-        margin-left: 4.5em;
-        z-index: 1;
-        margin-right: 7.5em;
-        /* width: min-content;*/
-    }
-    .lead {
-        font-size: 1em;
-    }
-    .jumbotron-heading {
-        font-size: 1.5em;
-    }
-    #button-for-scan {
-        font-size: 0.8em;
-        min-width: 0.8em;
-    }
-    #button-stop {
-        font-size: 0.8em;
-        min-width: 0.8em;
-    }
-}
-
-@media screen and (min-device-width: 480px) {
-    .jumbotron {
-        margin-right: 20%;
-        padding: 4rem 2rem;
-        margin-left: 20%;
-    }
 }
